force-app/main/default/objects/SFDC_Class__c/SFDC_Class__c.object-meta.xml
<CustomObject>
    <description>Track the date and location of where your various Courses will be taught, and who has enrolled in this Class.</description>
    <label>Class</label>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>