force-app/main/default/objects/SFDC_Class__c/fields/Date_Offered__c.field-meta.xml
<CustomField>
    <fullName>Date_Offered__c</fullName>
    <label>Date Offered</label>
    <type>Date</type>
</CustomField>