force-app/main/default/objects/SFDC_Class__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This links the class to the course</description>
    <label>Course</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>R00N40000001QAyiEAG</relationshipName>
    <type>Lookup</type>
</CustomField>