force-app/main/default/objects/SFDC_Class__c/fields/Staff_Contact__c.field-meta.xml
<CustomField>
    <fullName>Staff_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Instructor</inlineHelpText>
    <label>Staff Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>R00N40000001QAyhEAG</relationshipName>
    <type>Lookup</type>
</CustomField>