force-app/main/default/objects/SFDC_Class__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product2__c</columns>
    <columns>Facility__c</columns>
    <columns>Date_Offered__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>